--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
+    "ajv": "^6.7.0",
     "asn1js": "^2.0.21",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "npm": "^6.6.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.5.17",
     "vue-cookie": "^1.1.4",
     "vue-dragscroll": "^1.8.1",
+    "vue-i18n": "^8.1.0",
     "vue-infinite-loading": "^2.4.3",
+    "vue-localstorage": "^0.6.2",
     "vue-meta": "^1.5.5",
     "vue-multiselect": "^2.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue-session": "^1.0.0",
-    "vue-simple-spinner": "^1.2.8",
-    "vue-i18n": "^8.1.0",
-    "vue-localstorage": "^0.6.2"
+    "vue-simple-spinner": "^1.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -63,7 +66,7 @@
     "url-loader": "^1.1.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.5.22",
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.2",
