--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv": "^6.7.0",
     "asn1js": "^2.0.21",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "flag-icon-css": "^3.2.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
