--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "0.0.22",
     "ajv": "^6.7.0",
     "asn1js": "^2.0.21",
+    "bootstrap-toggle": "^2.2.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "flag-icon-css": "^3.2.1",
     "jquery": "^3.3.1",
