--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-dragscroll": "^1.8.1",
     "vue-i18n": "^8.1.0",
     "vue-infinite-loading": "^2.4.3",
+    "vue-izitoast": "^1.1.2",
     "vue-localstorage": "^0.6.2",
     "vue-meta": "^1.5.5",
     "vue-multiselect": "^2.1.3",
