--- a/package.json
+++ b/package.json
@@ -8,25 +8,28 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
-    "ajv": "^6.7.0",
-    "asn1js": "^2.0.21",
+    "ajv": "^6.9.2",
+    "asn1js": "^2.0.22",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "bootstrap": "^4.3.1",
     "bootstrap-toggle": "^2.2.2",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "flag-icon-css": "^3.2.1",
+    "bootstrap-vue": "^2.0.0-rc.13",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "npm": "^6.6.0",
+    "moment": "^2.24.0",
+    "npm": "^6.8.0",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "vue": "^2.5.17",
+    "vue": "^2.6.7",
     "vue-cookie": "^1.1.4",
-    "vue-dragscroll": "^1.8.1",
-    "vue-i18n": "^8.1.0",
+    "vue-dragscroll": "^1.8.3",
+    "vue-i18n": "^8.8.2",
     "vue-infinite-loading": "^2.4.3",
     "vue-izitoast": "^1.1.2",
     "vue-localstorage": "^0.6.2",
@@ -50,18 +53,21 @@
     "chalk": "^2.4.2",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.3.0",
+    "node-notifier": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "path": "^0.12.7",
     "portfinder": "^1.0.20",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.1.6",
     "postcss-url": "^7.3.2",
     "prerender-spa-plugin": "^3.4.0",
+    "purgecss-webpack-plugin": "^1.4.0",
     "rimraf": "^2.6.3",
     "semver": "^5.6.0",
     "shelljs": "^0.7.6",
@@ -69,10 +75,10 @@
     "url-loader": "^1.1.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.22",
+    "vue-template-compiler": "^2.6.7",
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.2.1",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.2.1"
   },
